Correction for z-index on banner

--- a/public/sass/layout/_page.scss
+++ b/public/sass/layout/_page.scss
@@ -6,7 +6,7 @@
   top: 0;
   left: 0;
   background-color: #0b5288;
-  z-index: 2000;
+  z-index: 1045;
 }
 
 #banner-include {
